hot fix home page buttons align

--- a/app/assets/stylesheets/custom/button.scss
+++ b/app/assets/stylesheets/custom/button.scss
@@ -2,7 +2,7 @@
   background-color: transparentize(white, 0.5);;
   width: 15rem;
   text-align: center;
-  margin: 2rem 0;
+  margin-top: 2rem;
   padding: 1rem;
   border-radius: 2rem;
   border: 1px solid white;
@@ -17,6 +17,7 @@
 
 .root-button-container {
   margin-top: 5rem;
+
 }
 
 $base_color: #295837;
